# scopekaleido

./: CMakeLists.txt  README.md
include/: KaleidoscopeJIT.hpp  ast.hpp  codegen.hpp  driver.hpp  symtab.hpp
src/: codegen.cc  driver.cc  dump.cc  parser.y  scanner.l
